2014-12-05  Myles C. Maxfield  <mmaxfield@apple.com>

        Directional single quotation marks are not rotated in vertical text
        https://bugs.webkit.org/show_bug.cgi?id=138526

        Compare vertical and horizontal renderings.

        Reviewed by Darin Adler.

        * fast/text/vertical-quotation-marks-expected.html: Added.
        * fast/text/vertical-quotation-marks.html: Added.

2014-12-04  Adenilson Cavalcanti  <cavalcantii@gmail.com>

        Groove/inset/outset borders show solid if the color is black
        https://bugs.webkit.org/show_bug.cgi?id=58608

        Reviewed by Simon Fraser.

        * fast/borders/mixed-border-style2.html: Added.
        * platform/mac-mavericks/fast/borders/mixed-border-style2-expected.png: Added.
        * platform/mac-mavericks/fast/borders/mixed-border-style2-expected.txt: Added.

2014-12-03  Myles C. Maxfield  <mmaxfield@apple.com>

        List markers in RTL languages do not draw the first character.
        https://bugs.webkit.org/show_bug.cgi?id=139244

        Reviewed by Simon Fraser.

        * fast/lists/rtl-marker-expected.html: Added.
        * fast/lists/rtl-marker.html: Added.

2014-12-03  Zalan Bujtas  <zalan@apple.com>

        ASSERTION: RenderMultiColumnFlowThread::processPossibleSpannerDescendant() when column spanner's parent is not a RenderBlockFlow.
        https://bugs.webkit.org/show_bug.cgi?id=139188
        rdar://problem/18502182

        Reviewed by David Hyatt.

        This patch ensures that the validation check for spanner in isValidColumnSpanner() is in synch
        with the expectation in RenderMultiColumnFlowThread::processPossibleSpannerDescendant().
        (descendant's parent is expected to be a RenderBlockFlow)

        * fast/multicol/svg-content-as-column-spanner-crash-expected.txt: Added.
        * fast/multicol/svg-content-as-column-spanner-crash.html: Added.

2014-12-01  Zalan Bujtas  <zalan@apple.com>
