@@ -1,3 +1,15 @@
+2014-12-05  Antti Koivisto  <antti@apple.com>
+
+        REGRESSION (173394): Support for webcam is broken
+        https://bugs.webkit.org/show_bug.cgi?id=139313
+
+        Reviewed by Alexey Proskuryakov.
+
+        * NetworkProcess/NetworkResourceLoader.cpp:
+        (WebKit::NetworkResourceLoader::didReceiveResponseAsync):
+
+            Don't buffer when handling multipart/x-mixed-replace. Multiple calls to didReceiveResponseAsync break assumptions.
+
 2014-12-04  Antti Koivisto  <antti@apple.com>
 
         REGRESSION (r173468): Cannot step in WebInspector
